# eflips-ingest

./: .gitignore  .mailmap  .pre-commit-config.yaml  API.md  README.md  bvgxml_create_test_database.py  pyproject.toml
.github/workflows/: release.yml  unittests-eflips-model-v9.yml  unittests.yml
data/: README.md  bvg_xml.xsd
eflips/ingest/: __init__.py  base.py  bvgxml.py  dummy.py  gtfs.py  util.py  vdv.py  vdv2.py  vdv_schema.py
eflips/ingest/bvgxml/: __init__.py  _ingester.py  _pipeline.py  _xmldata.py  bvg_xml.xsd
eflips/ingest/legacy/: bvgxml.py
eflips/ingest/vdv/: __init__.py  _ingester.py  _xmldata.py
eflips/ingest/vdv452data/: __init__.py  vdv452_v1_5.py
eflips/ingest/xmldata/: README.md  __init__.py  bvg_xml.py
samples/BVGXML/: Linienfahrplan_10_05.07.2023_125_0_N_N.response.xml  Linienfahrplan_10_06.07.2023_829_0_N_N.response.xml  Linienfahrplan_10_07.07.2023_811_0_N_N.response.xml
samples/VDV/: .gitignore
samples/VDV/Trier/: basis_ver_gueltigkeit.x10  firmenkalender.x10  lid_verlauf.x10  menge_basis_versionen.x10  menge_bereich.x10  menge_fahrtart.x10  menge_fgr.x10  menge_fzg_typ.x10  menge_onr_typ.x10  menge_ort_typ.x10  menge_tagesart.x10  ort_hztf.x10  rec_anr.x10  rec_frt_hzt.x10  rec_frt_verlauf_attrib.x10  rec_hp.x10  rec_lid.x10  rec_om.x10  rec_ort.x10  rec_sel.x10  rec_umlauf.x10  rec_znr.x10  sel_fzt_feld.x10
samples/VDV/Vogtland/: basis_ver_gueltigkeit.x10  firmenkalender.x10  lid_verlauf.x10  menge_basis_versionen.x10  menge_bereich.x10  menge_fahrtart.x10  menge_fgr.x10  menge_fzg_typ.x10  menge_onr_typ.x10  menge_ort_typ.x10  menge_tagesart.x10  ort_hztf.x10  rec_anr.x10  rec_frt_hzt.x10  rec_hp.x10  rec_lid.x10  rec_om.x10  rec_ort.x10  rec_sel.x10  rec_umlauf.x10  rec_znr.x10  sel_fzt_feld.x10  zp_param.x10
tests/: base.py  conftest.py  test_base.py  test_bvgxml.py  test_dummy.py  test_gtfs.py  test_util.py  test_vdv.py  test_vdv2.py  test_vdv_unit.py
tests/test_vdv2_files/: FAHRZEUG_valid.X10  invalid_charset.X10  komplett_anderer_inhalt.X10  missing_charset.X10  missing_table_name.X10  non_ascii_zeichen_header_ISO8859-1.X10  non_conform_encoding.X10
(+3 files in other folders)
