[tool.poetry]
name = "eflips-ingest"
version = "1.2.80"
description = "A collection of import scripts for converting bus schedule data into the [eflips-model](https://github.com/mpm-tu-berlin/eflips-model) data format."
authors = [
    "Ludger Heide <ludger.heide@lhtechnologies.de>"
]
readme = "README.md"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/mpm-tu-berlin/eflips-ingest"
repository = "https://github.com/mpm-tu-berlin/eflips-ingest"
packages = [{ include = "eflips/ingest" }]
include = ["LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.10"
eflips-model = ">=3.1.1,<10.0.0"
requests = "^2.31.0"
fire = "^0.7.0"
lxml = "^5.1.0"
tqdm = "^4.66.1"
pyproj = "^3.6.1"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
pytest = "^7.4.3"
pytest-pycharm = "^0.7.0"
pre-commit = "^3.5.0"
xsdata = {extras = ["cli", "lxml"], version = "^24.1"}
types-requests = "^2.31.0.20240125"
lxml-stubs = "^0.5.1"
types-tqdm = "^4.66.0.20240106"
types-psycopg2 = "^2.9.21.20240118"
types-pytz = "^2024.1.0.20240417"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
